# pico_thrust_stand

./: .gitmodules  CMakeLists.txt
include/: config.h
lib/dshot/: dshot.cpp  dshot.h
lib/shoot/: shoot.cpp  shoot.h
lib/tts/: tts.cpp  tts.h
lib/utils/: utils.cpp  utils.h
src/: main.cpp
